[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Garden/Pot-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Interactables/Pot.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 102, 102 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 102, 0, 102, 102 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "selected",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 51, 51 )

[node name="Pot" type="Area2D" groups=["Pot"]]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 51, 51 )
shape = SubResource( 4 )

[node name="PlantPoint" type="Node2D" parent="."]
position = Vector2( 8, -87 )

[connection signal="input_event" from="." to="." method="_on_Pot_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Pot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Pot_mouse_exited"]
